--- a/Computer Science/elements/11/5/3354.HTM
+++ b/Computer Science/elements/11/5/3354.HTM
@@ -1,2 +1,1 @@
-Because the child runs exactly the same code as the parent, it can be trusted to set up the context for the new program correctly</P>
-<P>&#22240;&#20026;&#23376;&#36827;&#31243;&#23558;&#36816;&#34892;&#21644;&#29238;&#36827;&#31243;&#23436;&#20840;&#30456;&#21516;&#30340;&#20195;&#30721;&#65292;&#22240;&#27492;&#35753;&#23376;&#36827;&#31243;&#33258;&#24049;&#21435;&#35774;&#32622;&#26032;&#31243;&#24207;&#30340;&#19978;&#19979;&#25991;&#26159;&#27809;&#26377;&#38382;&#39064;&#30340;
+This noun can also refer to language that uses long sentences and hard words. If you say that someone's speech or writing is full of <SPAN class=cloze>[...]</SPAN>, this means you don't approve of it and think it should be simplified.
