--- a/Computer Science/elements/14/2/4222.HTM
+++ b/Computer Science/elements/14/2/4222.HTM
@@ -1,4 +1,1 @@
-The operating system needs a data structure to represent a thread&#8217;s state; a thread is like any other object in this regard. This data structure is called the <EM><A data-9uzdtcnnj6xqoalwmdp3qa='{"name": "OEBPS/Text/part0000.xhtml", "frag": "glo:thread control block"}'>thread control block</A></EM> (TCB). For every thread the operating system creates, it creates one TCB.
-<P></P>
-<P>TCB &#20316;&#20026;&#19968;&#31181;&#20869;&#26680;&#25968;&#25454;&#32467;&#26500;&#65292;&#20316;&#29992;&#23601;&#26159;&#20445;&#23384;&#32447;&#31243;&#29366;&#24577;</P>
-<P>&#27599;&#24403; OS &#21019;&#24314;&#36827;&#31243;&#30340;&#26102;&#20505;&#65292;&#23427;&#37117;&#20250;&#21516;&#26102;&#21019;&#24314;&#23545;&#24212;&#30340; TCB
+TCB &#20316;&#20026;&#19968;&#31181;&#20869;&#26680;&#25968;&#25454;&#32467;&#26500;&#65292;&#20316;&#29992;&#23601;&#26159;&#20445;&#23384;&#32447;&#31243;&#29366;&#24577;
