--- a/Computer Science/elements/14/24/4445.HTM
+++ b/Computer Science/elements/14/24/4445.HTM
@@ -1,1 +1,1 @@
-<FONT style="BACKGROUND-COLOR: #f9f5e9">&#21629;&#20196;&#35299;&#37322;&#31995;&#32479;&#26159;&#29992;&#25143;&#21644;&#31995;&#32479;&#20132;&#20114;&#30340;&#26041;&#24335;</FONT>
+<FONT style="BACKGROUND-COLOR: #f9f5e9"><SPAN class=cloze>[...]</SPAN>&#26159;&#29992;&#25143;&#21644;&#31995;&#32479;&#20132;&#20114;&#30340;&#26041;&#24335;</FONT>
