--- a/Computer Science/elements/15/6/4565.HTM
+++ b/Computer Science/elements/15/6/4565.HTM
@@ -1,2 +1,1 @@
-The thread_switch&nbsp;code may seem tricky, since it is called in the context of the old thread and finishes in the context of the new thread.</P>
-<P>thread_switch &#36890;&#36807;&#20462;&#25913;&#23492;&#23384;&#22120;&#21644;&#26632;&#25351;&#38024;&#65292;&#25104;&#21151;&#20351;&#24471;&#22788;&#29702;&#22120;&#20197;&#26087;&#32447;&#31243;&#30340;&#36523;&#20221;&#36827;&#20837; thread_switch &#20989;&#25968;&#65292;&#20197;&#26032;&#32447;&#31243;&#30340;&#36523;&#20221;&#31163;&#24320; thread_switch &#20989;&#25968;
+When it comes to computers, a <SPAN class=cloze>[...]</SPAN>is code that does a specific job, often taking you from one site to another in a single click.
