--- a/Computer Science/elements/17/1/5118.HTM
+++ b/Computer Science/elements/17/1/5118.HTM
@@ -1,2 +1,1 @@
-That expensive Ferrari in the showroom? You may want it, but its price is prohibitive&#8212; which means the price is discouragingly high and likely to deter you from buying.</P>
-<P>Prohibitive originally referred to something (often a law) that prohibits or forbids something, but it came to mean conditions (often prices or taxes) so high or great they restrict or prevent something: "To some, the cost of child care is prohibitive." The stress is on the second syllable, just like the verb: pro-HIB-i-tive. If it's a matter of expense, a synonym is exorbitant.
+That expensive Ferrari in the showroom? You may want it, but its price is prohibitive&#8212; which means the price is discouragingly high and likely to deter you from buying.
