--- a/Computer Science/elements/6/2/1821.HTM
+++ b/Computer Science/elements/6/2/1821.HTM
@@ -1,1 +1,3 @@
-&#20256;&#25773;&#24310;&#36831;&#19981;&#21462;&#20915;&#20110;&#36335;&#30001;&#22120;&#30340;&#20256;&#36755;&#36895;&#29575;
+<SPAN class=extract>That expensive Ferrari in the showroom? You may want it, but its price is prohibitive&#8212; which means the price is discouragingly high and likely to deter you from buying. </SPAN>
+<P></P>
+<P><SPAN class=extract>Prohibitive originally referred to something (often a law) that prohibits or forbids something, but it came to mean conditions (often prices or taxes) so high or great they restrict or prevent something: "To some, the cost of child care is prohibitive." </SPAN>The stress is on the second syllable, just like the verb: pro-HIB-i-tive. If it's a matter of expense, a synonym is exorbitant.
