--- a/Computer Science/elements/10/12/3124.HTM
+++ b/Computer Science/elements/10/12/3124.HTM
@@ -1,2 +1,3 @@
-A program header table, if present, tells the system how to create a process image. </P>
-<P>&#31243;&#24207;&#22836;&#34920;&#65288;program header table&#65289;&#30340;&#20027;&#35201;&#20316;&#29992;&#23601;&#26159;&#21578;&#35785;&#31995;&#32479;&#22914;&#20309;&#26500;&#24314;&#36827;&#31243;&#26144;&#20687;
+A program header table, if present, tells the system how to create a process image. 
+<P></P>
+<P><SPAN class=extract>&#31243;&#24207;&#22836;&#34920;&#65288;program header table&#65289;&#30340;&#20027;&#35201;&#20316;&#29992;&#23601;&#26159;&#21578;&#35785;&#31995;&#32479;&#22914;&#20309;&#26500;&#24314;&#36827;&#31243;&#26144;&#20687;</SPAN>
