--- a/Computer Science/elements/6/1/1813.HTM
+++ b/Computer Science/elements/6/1/1813.HTM
@@ -1,1 +1,1 @@
-<SPAN class=cloze>[...]</SPAN>can also have a more abstract meaning, such as understanding or grasping a concept. You should be able to handle geometry before you start trig, right?
+<SPAN>Handle </SPAN>
