--- a/Computer Science/elements/17/27/5373.HTM
+++ b/Computer Science/elements/17/27/5373.HTM
@@ -1,1 +1,1 @@
-<SPAN class=clozed>Handle </SPAN>can also have a more abstract meaning, such as understanding or grasping a concept. You should be able to handle geometry before you start trig, right?
+<SPAN><SPAN class=cloze>[...]</SPAN></SPAN>can also have a more abstract meaning, such as understanding or grasping a concept. You should be able to handle geometry before you start trig, right?
